psd files and html structure update

--- a/reviews/index.html
+++ b/reviews/index.html
@@ -13,6 +13,7 @@
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
+        <script src="https://use.fontawesome.com/6de97a189b.js"></script>
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -20,7 +21,63 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <header>
+            <h1>unplugged</h1>
+            <nav>
+                <ul>
+                    <li><i class="fa fa-music" aria-hidden="true"></i><a href="#">concerts</li>
+                    <li><i class="fa fa-headphones" aria-hidden="true"></i><a href="#"></a>reviews</li>
+                    <li><i class="fa fa-users" aria-hidden="true"></i><a href="#"></a>about us</li>
+                    <li><i class="fa fa-question-circle" aria-hidden="true"></i><a href="#"></a>faq</li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- article -->
+        <div>
+            <section>
+                <article>
+                    <img src="">
+                    <h3>beruits new album - their best album yet</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                </article>
+            </section>
+        </div>
+
+        <!-- newsletter sign up -->
+        <div>
+            <aside>
+                <h4>want to write for us?</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <button>find out more</button>
+            </aside>
+        </div>
+
+        <!-- recent news stories -->
+        <section>
+            <article>
+                <h3>recent reviews</h3>
+                <h5>reviews</h5>
+                <img src="">
+                <p>arcade fire hints about a new side project - what will it be?</p>
+            </article>
+            <article>
+                <h5>reviews</h5>
+                <img src="">
+                <p>our round up of 2015's top summer festivals & free shows</p>
+            </article>
+            <article>
+                <h5>reviews</h5>
+                <img src="">
+                <p>laura marling and johnny flynn are teaming up again - will is be an album or a single</p>
+            </article>
+        </section>
+
+        <footer>
+            <h2>unplugged</h2>
+        </footer>
+
         <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
