--- a/index.html
+++ b/index.html
@@ -13,14 +13,69 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <script src="https://use.fontawesome.com/6de97a189b.js"></script>
     </head>
     <body>
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <header>
+            <h1>unplugged</h1>
+            <nav>
+                <ul>
+                    <li><i class="fa fa-music" aria-hidden="true"></i><a href="#">concerts</li>
+                    <li><i class="fa fa-headphones" aria-hidden="true"></i><a href="#"></a>reviews</li>
+                    <li><i class="fa fa-users" aria-hidden="true"></i><a href="#"></a>about us</li>
+                    <li><i class="fa fa-question-circle" aria-hidden="true"></i><a href="#"></a>faq</li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- article -->
+        <div>
+            <section>
+                <article>
+                    <img src="">
+                    <h3>wilco announces a new album and summer tour</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                </article>
+            </section>
+        </div>
+
+        <!-- newsletter sign up -->
+        <div>
+            <aside>
+                <h4>newsletter signup</h4>
+                <input type="" name="">
+                <button>sign up</button>
+            </aside>
+        </div>
+
+        <!-- recent news stories -->
+        <section>
+            <article>
+                <h3>recent news & reviews</h3>
+                <h5>news</h5>
+                <img src="">
+                <p>arcade fire hints about a new side project - what will it be?</p>
+            </article>
+            <article>
+                <h5>news</h5>
+                <img src="">
+                <p>our round up of 2015's top summer festivals & free shows</p>
+            </article>
+            <article>
+                <h5>news</h5>
+                <img src="">
+                <p>laura marling and johnny flynn are teaming up again - will is be an album or a single</p>
+            </article>
+        </section>
+
+        <footer>
+            <h2>unplugged</h2>
+        </footer>
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
