--- a/about/faq.html
+++ b/about/faq.html
@@ -13,6 +13,11 @@
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
+
+        <!-- fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
+        <script src="https://use.fontawesome.com/6de97a189b.js"></script>
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -20,7 +25,88 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        
+        <header>
+            <a href="../index.html"><h1 class="title">unplugged</h1></a>
+            <nav class="nav">
+                <div class="nav-links">
+                    <a href="../concerts/index.html"><i class="fa fa-music" aria-hidden="true"></i> concerts</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../reviews/index.html"><i class="fa fa-headphones" aria-hidden="true"></i> reviews</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/index.html"><i class="fa fa-users" aria-hidden="true"></i> about us</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/faq.html"><i class="fa fa-question-circle" aria-hidden="true"></i>faq</a>
+                </div>
+            </nav>
+        </header>
+
+        <div class="faq full-width">
+            <div class="faq-instance">
+                <h2>frequently asked questions</h2>
+                <p class="question">This is the question that's frequently asked?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                <p>Email us at: hello@unplugged.com</p>
+            </div>
+            <hr>
+            <div class="faq-instance">
+                <p class="question">This is the question that's frequently asked?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                <p>Email us at: hello@unplugged.com</p>
+            </div>
+            <hr>
+            <div class="faq-instance">
+                <p class="question">This is the question that's frequently asked?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                <p>Email us at: hello@unplugged.com</p>
+            </div>
+            <hr>
+            <div class="faq-instance">
+                <p class="question">This is the question that's frequently asked?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                <p>Email us at: hello@unplugged.com</p>
+            </div>
+        </div>
+
+
+        <footer>
+            <h6>unplugged</h6>
+        </footer>
+
+
+
+
+
+
+
+
         <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
