--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,11 @@
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
+
+        <!-- fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
+        <script src="https://use.fontawesome.com/6de97a189b.js"></script>
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -20,7 +25,96 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <header>
+            <a href="../index.html"><h1 class="title">unplugged</h1></a>
+            <nav class="nav">
+                <div class="nav-links">
+                    <a href="../concerts/index.html"><i class="fa fa-music" aria-hidden="true"></i> concerts</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../reviews/index.html"><i class="fa fa-headphones" aria-hidden="true"></i> reviews</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/index.html"><i class="fa fa-users" aria-hidden="true"></i> about us</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/faq.html"><i class="fa fa-question-circle" aria-hidden="true"></i>faq</a>
+                </div>
+            </nav>
+        </header>
+
+        <div class="about full-width">
+            <div class="about-info">
+                <h2>contact us</h2>
+                <p class="byline"><span>Email:</span> hello@unplugged.com</p>
+                <p class="byline"><span>Telephone:</span> (555)555-5555</p>
+                <p class="byline"><span>Address:</span> 12 noname sT<br> brooklyn, nY 11200</p>
+            </div>
+            <div class="map-container about-img">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.712204595593!2d-73.99104808506385!3d40.702335579332946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a33e27d5035%3A0x155d5b662b4ec4b8!2s100+Front+St%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1510428712482" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div class="mission full-width">
+            <hr>
+            <h2>mission statement</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+        <div class="team full-width">
+            <hr>
+            <h2>meet the team</h2>
+            <div class="member-instance">
+                <div class="member-img">
+                    <img src="../img/team1.jpg">
+                </div>
+                <div class="member-info">
+                    <h3>full name</h3>
+                    <h5>job title</h5>
+                    <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                </div>
+            </div>
+            <div class="member-instance">
+                <div class="member-img">
+                    <img src="../img/team2.jpg">
+                </div>
+                <div class="member-info">
+                    <h3>full name</h3>
+                    <h5>job title</h5>
+                    <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                </div>
+            </div>
+            <div class="member-instance">
+                <div class="member-img">
+                    <img src="../img/team3.jpg">
+                </div>
+                <div class="member-info">
+                    <h3>full name</h3>
+                    <h5>job title</h5>
+                    <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <footer>
+            <h6>unplugged</h6>
+        </footer>
+
         <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
