--- a/concerts/index.html
+++ b/concerts/index.html
@@ -13,6 +13,11 @@
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
+
+        <!-- fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        
+        <script src="https://use.fontawesome.com/6de97a189b.js"></script>
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -20,7 +25,145 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <header>
+            <a href="../index.html"><h1 class="title">unplugged</h1></a>
+            <nav class="nav">
+                <div class="nav-links">
+                    <a href="../concerts/index.html"><i class="fa fa-music" aria-hidden="true"></i> concerts</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../reviews/index.html"><i class="fa fa-headphones" aria-hidden="true"></i> reviews</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/index.html"><i class="fa fa-users" aria-hidden="true"></i> about us</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/faq.html"><i class="fa fa-question-circle" aria-hidden="true"></i>faq</a>
+                </div>
+            </nav>
+        </header>
+
+        <div class="concert-list full-width">
+            <h2>upcoming concerts</h2>
+            <div class="page-left-side">
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="page-right-side">
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="concert-instance">
+                    <div class="concert-date">
+                        <p>June<br>15</p>
+                    </div>
+                    <div class="concert-info">
+                        <h3>band name</h3>
+                        <p>location</p>
+                        <p>full date</p>
+                        <button type="submit">buy tickets</button>
+                    </div>
+                </div>
+                <hr class="hide-mobile">
+            </div>   
+        </div>
+
+        <div class="main">
+            <div class="sidebar sidebar-concert-page">
+                <div class="newsletter-signup full-width">
+                    <h3>newsletter signup</h3>
+                    <input type="text" name="">
+                    <div>
+                        <button type="submit">sign up</button>
+                    </div>
+                    <hr class="hide-mobile hide-tablet">
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <h6>unplugged</h6>
+        </footer>
+    
         <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
