--- a/reviews/index.html
+++ b/reviews/index.html
@@ -13,6 +13,10 @@
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
+
+        <!-- fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
         <script src="https://use.fontawesome.com/6de97a189b.js"></script>
     </head>
     <body>
@@ -22,60 +26,145 @@
 
         <!-- Add your site or application content here -->
         <header>
-            <h1>unplugged</h1>
-            <nav>
-                <ul>
-                    <li><i class="fa fa-music" aria-hidden="true"></i><a href="#">concerts</li>
-                    <li><i class="fa fa-headphones" aria-hidden="true"></i><a href="#"></a>reviews</li>
-                    <li><i class="fa fa-users" aria-hidden="true"></i><a href="#"></a>about us</li>
-                    <li><i class="fa fa-question-circle" aria-hidden="true"></i><a href="#"></a>faq</li>
-                </ul>
+            <a href="../index.html"><h1 class="title">unplugged</h1></a>
+            <nav class="nav">
+                <div class="nav-links">
+                    <a href="../concerts/index.html"><i class="fa fa-music" aria-hidden="true"></i> concerts</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../reviews/index.html"><i class="fa fa-headphones" aria-hidden="true"></i> reviews</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/index.html"><i class="fa fa-users" aria-hidden="true"></i> about us</a>
+                </div>
+                <div class="nav-links">
+                    <a href="../about/faq.html"><i class="fa fa-question-circle" aria-hidden="true"></i>faq</a>
+                </div>
             </nav>
         </header>
 
-        <!-- article -->
-        <div>
-            <section>
-                <article>
-                    <img src="">
-                    <h3>beruits new album - their best album yet</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                </article>
-            </section>
+        <div class="top-story full-width">
+            <img src="../img/review-top.jpg">
+            <h2>beruit's new album - their best album yet</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+            <hr class="hide-tablet hide-desktop">
         </div>
 
-        <!-- newsletter sign up -->
-        <div>
-            <aside>
-                <h4>want to write for us?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-                <button>find out more</button>
-            </aside>
-        </div>
+        <div class="main">
+            <div class="sidebar">
+                <div class="newsletter-signup full-width">
+                    <h3>newsletter signup</h3>
+                    <input type="text" name="">
+                    <div>
+                         <button type="submit">sign up</button>
+                    </div>
+                </div>
+                <div class="newsletter-signup full-width hide-mobile">
+                    <h3>upcoming concerts</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div>
+                         <button type="submit">see all</button>
+                    </div>
+                </div>
+                <div class="newsletter-signup full-width hide-mobile">
+                    <h3>frequently asked questions</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div>
+                        <button type="submit">see all</button>
+                    </div>
+                    <hr class="hide-mobile hide-tablet hide-desktop">
+                </div>
+            </div>
 
-        <!-- recent news stories -->
-        <section>
-            <article>
-                <h3>recent reviews</h3>
-                <h5>reviews</h5>
-                <img src="">
-                <p>arcade fire hints about a new side project - what will it be?</p>
-            </article>
-            <article>
-                <h5>reviews</h5>
-                <img src="">
-                <p>our round up of 2015's top summer festivals & free shows</p>
-            </article>
-            <article>
-                <h5>reviews</h5>
-                <img src="">
-                <p>laura marling and johnny flynn are teaming up again - will is be an album or a single</p>
-            </article>
-        </section>
+            <div class="news-feed full-width">
+                <hr class="hide-tablet">
+                <div>
+                    <h3>recent reviews</h3>
+                    <div class="news-article">
+                        <h5>reviews</h5>
+                        <div class="article-img">
+                            <img src="../img/review1.jpg">
+                        </div>
+                        <div class="article-blurb">
+                            <h3>This is the blurb about the concert! It's different each time.</h3>
+                            <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="news-story">
+                    <div class="news-article">
+                        <h5>reviews</h5>
+                        <div class="article-img">
+                            <img src="../img/review2.jpg">
+                        </div>
+                        <div class="article-blurb">
+                            <h3>This is the blurb about the concert! It's different each time.</h3>
+                            <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="news-story">
+                    <div class="news-article">
+                        <h5>reviews</h5>
+                        <div class="article-img">
+                            <img src="../img/review3.jpg">
+                        </div>
+                        <div class="article-blurb">
+                            <h3>This is the blurb about the concert! It's different each time.</h3>
+                            <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="news-story">
+                    <div class="news-article">
+                        <h5>reviews</h5>
+                        <div class="article-img">
+                            <img src="../img/review4.jpg">
+                        </div>
+                        <div class="article-blurb">
+                            <h3>This is the blurb about the concert! It's different each time.</h3>
+                            <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="news-story-last">
+                    <div class="news-article">
+                        <h5>reviews</h5>
+                        <div class="article-img">
+                            <img src="../img/review5.jpg">
+                        </div>
+                        <div class="article-blurb">
+                            <h3>This is the blurb about the concert! It's different each time.</h3>
+                            <p class="hide-mobile hide-tablet-display">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</p>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
 
         <footer>
-            <h2>unplugged</h2>
+            <h6>unplugged</h6>
         </footer>
 
         <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
